tests/baselines/reference/arrayReferenceWithoutTypeArgs.errors.txt
arrayReferenceWithoutTypeArgs.ts(2,17): error TS2314: Generic type 'Array<T>' requires 1 type argument(s).


==== arrayReferenceWithoutTypeArgs.ts (1 errors) ====
    class X {
        public f(a: Array) { }
                    ~~~~~
!!! error TS2314: Generic type 'Array<T>' requires 1 type argument(s).
    }